finish i18next config

--- a/locales/en-US/general.json
+++ b/locales/en-US/general.json
@@ -1,3 +1,4 @@
 {
-  "change_language": "Mudar idioma do site para {{locale}}"
+  "change_language": "Mudar idioma do site para {{locale}}",
+  "here_text": "I'm here"
 }
