--- a/locales/pt-BR/general.json
+++ b/locales/pt-BR/general.json
@@ -1,3 +1,4 @@
 {
-  "change_language": "Change site language to {{locale}}"
+  "change_language": "Change site language to {{locale}}",
+  "here_text": "Estou aqui"
 }
