--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,3 +1,4 @@
 {
-  "change_language": "Change site language to {{locale}}"
+  "change_language": "Change site language to {{locale}}",
+  "Im Felipe": "Me chamo <highlight>Felipe Marcon</highlight> e eu projeto experiências incríveis."
 }
