add ptBR translates

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -16,9 +16,9 @@
   "A little more about me": "A little more <highlight>about me</highlight>",
   "This is me": "This is me on the picture",
   "Designer and Musician": "Designer, Musician and pizza lover",
-  "Fun fact": "Fun fact: it’s says “Pizza or die” on my shirt in this photo and I was at Dominos when this photo was taken. I really like pizza. 🍕",
-  "Places I Worked": "Places I Worked",
-  "Let's work": "<highlight>together</highlight>",
+  "Fun fact": "Fun fact: it’s says “Pizza or die” on my shirt in this photo and I was at Domino's when this photo was taken. I really like pizza. 🍕",
+  "Places I Worked": "Places I <highlight>work</highlight>",
+  "Lets work": "Let's work <highlight>together?</highlight>",
   "Im free to do projects": "I’m free to do some freelance projects.",
   "We can talk": "We can talk about your ideas.",
   "Get in touch": "Get in touch",
