set language cookie

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,7 @@
     "articles": "Articles"
   },
   "Go to home": "Go to home page",
-  "Change Language": "Mudar idioma do site para {{locale}}",
+  "Change language": "Mudar idioma do site para {{locale}}",
   "Hello there": "Hello, there 👋",
   "Im Felipe": "I'm <highlight>Felipe Marcon</highlight> and I design delightful experiences.",
   "Hero Description": "I am a Product Designer and I love to develop experiences and help people and companies through good design. In my spare time I play music with some friends.",
