--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -5,13 +5,13 @@
     "articles": "Artigos"
   },
   "Go to home": "Go to home page",
-  "change_language": "Change site language to {{locale}}",
+  "Change language": "Change site language to {{locale}}",
   "Hello there": "Olá, visitante 👋",
   "Im Felipe": "Me chamo <highlight>Felipe Marcon</highlight> e eu projeto experiências incríveis.",
   "Hero Description": "Sou Designer Produto e eu gosto de desenvolver experiências digitais e ajudar as pessoas e empresas através de um bom design. Em meu tempo livre eu faço música com meus amigos.",
   "How can I help you?": "Como posso te ajudar?",
   "Check my work": "Veja meus trabalhos",
-  "Things I've done": "Coisas que <highlight>eu fiz</highlight>",
+  "Things I've done": "Coisas que <highlight>já fiz</highlight>",
   "More projects": "Você pode ver mais trabalhos meus no <link_1/> ou <link_2/>.",
   "A little more about me": "Um pouco mais <highlight>sobre mim</highlight>",
   "This is me": "Sou eu nessa foto ;)",
