add arrowIcon to home hero button

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -3,7 +3,7 @@
     "work": "Projetos",
     "about": "Sobre",
     "articles": "Artigos",
-    "contact": "Get in touch"
+    "contact": "Contato"
   },
   "Go to home": "Go to home page",
   "Change language": "Change site language to {{locale}}",
